--- a/page1.html
+++ b/page1.html
@@ -271,7 +271,7 @@
                         Email: nhacaivnew88@gmail.com
                     </p>
                     <p class="text-sm sm:text-md text-[#FFFFFF] text-md">
-                        Website: New88.com
+                        Website: new88.school
                     </p>
                 </div>
                 <div class="right *:py-2">
