--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- css -->
     <link rel="stylesheet" href="./assets/index.css">
 
-    <title>New88 - Trang Chủ Chính Thức Của New88.com</title>
+    <title>New88 - Trang Chủ Chính Thức Của New88.school</title>
 </head>
 <body class="bg-[#252b38]">
     <!-- header -->
@@ -195,7 +195,7 @@
     <!-- section -->
      <section class="w-full p-2">
         <div class="main max-w-[1200px] m-auto">
-            <h1 class="text-center text-xl md:text-3xl text-[#fead00] font-bold">New88 ✔ Casino New88 | Đăng Nhập & Đăng Ký Trang Chủ New88.com</h1>
+            <h1 class="text-center text-xl md:text-3xl text-[#fead00] font-bold">New88 ✔ Casino New88 | Đăng Nhập & Đăng Ký Trang Chủ New88.school</h1>
             <p class="text-[#FFFFFF] font-medium py-5">
                 <i>
                     <span class="text-[#fead00] font-bold">New88</span> là <span class="text-[#fead00] font-bold">sòng bạc trực tuyến</span> thuộc liên minh OKVIP. New88 cung cấp đa dạng sản phẩm cá cược như: casino, xổ số, bắn cá, đá gà, cá cược thể thao. Để có thể yên tâm khi tham gia chơi tại đây, mời bạn cùng tìm hiểu những đánh giá từ các chuyên gia về nhà cái New88 chi tiết qua bài viết dưới đây.
@@ -206,7 +206,7 @@
                 <img src="./assets/img/pic/1.jpg" alt="" class="w-full">
             </div>
             <p class="text-sm sm:text-md text-[#FFFFFF]">New88 xuất hiện trên thị trường giúp người chơi có thêm lựa chọn chất lượng để khám phá niềm vui của cá cược. Thông tin về nhà cái sẽ có cụ thể trong phần sau đây:</p>
-            <h2 class="text-lg md:text-2xl text-[#fead00] font-bold py-5">Trụ sở chính của New88.com</h2>
+            <h2 class="text-lg md:text-2xl text-[#fead00] font-bold py-5">Trụ sở chính của New88.school</h2>
             <p class="text-sm sm:text-md text-[#FFFFFF]">New88 có trụ sở chính tại Manila – Philippines. Nhà cái bắt đầu tiếp cận người dùng bằng tấm giấy phép từ chính phủ Costa Rica. Hiện tại nhà cái đã có mặt tại rất nhiều quốc gia và luôn được phản hồi là địa chỉ cung cấp uy tín và chất lượng.</p>
             <h2 class="text-lg md:text-2xl text-[#fead00] font-bold py-5">Lịch sử hình thành New88</h2>
             <p class="text-sm sm:text-md text-[#FFFFFF]">Nhà cái New88 hiện tại đang trực thuộc tập đoàn OKVIP đây là liên minh giải trí online lớn trên toàn cầu. Nhà cái đã ra mắt từ năm 2006 và hiện đã trải qua nhiều giai đoạn phát triển như:</p>
