--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="./assets/index.css">
-
     <title>New88 - Trang Chủ Chính Thức Của New88.school</title>
 </head>
 <body class="bg-[#252b38]">
@@ -29,7 +28,7 @@
             <div class="top w-full flex justify-between items-center">
                 <div class="left gap-5 hidden sm:flex justify-between items-center">
                     <div class="box text-[#FFF] hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <div class="item flex justify-between items-center gap-2 text-[13px]">
                                 <i class="fa-solid fa-handshake-simple"></i>
                                 <p>Đại lý</p>
@@ -37,7 +36,7 @@
                         </a>
                     </div>
                     <div class="box text-[#FFF] hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <div class="item flex justify-between items-center gap-2 text-[13px]">
                                 <i class="fa-solid fa-headphones"></i>
                                 <p>Chăm sóc khách hàng online</p>
@@ -47,17 +46,17 @@
                 </div>
                 <div class="right flex justify-between items-center gap-5 max-w-[350px] w-full m-auto sm:m-0 *:w-[100%] text-center">
                     <div class="box">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <p class="py-2 px-3 border border-[#ffff65] rounded-full bg-[#fead00] hover:bg-[#ffd988] font-medium text-[#000000] text-xs sm:text-sm transition-all duration-300">Đăng nhập</p>
                         </a>
                     </div>
                     <div class="box">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <p class="py-2 px-3 border border-[#ffff65] rounded-full bg-[#252b38] hover:text-[#fead00] font-medium text-[#FFFFFF] text-xs sm:text-sm transition-all duration-300">Đăng ký</p>
                         </a>
                     </div>
                     <div class="box">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <p class="py-2 px-3 border border-[#ffff65] rounded-full bg-[#fead00] hover:bg-[#ffd988] font-medium text-[#000000] text-xs sm:text-sm transition-all duration-300">Chơi thử</p>
                         </a>
                     </div>
@@ -69,67 +68,67 @@
         <nav class="bg-[#000000] hidden md:block">
             <div class="main max-w-[1200px] m-auto py-2 gap-5 flex items-center">
                 <div class="logo lg:max-w-[200px] md:max-w-[150px] w-full">
-                    <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                    <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                         <img src="./assets/img/pic/logo.png" alt="">
                     </a>
                 </div>
                 <ul class="max-w-[900px] w-full flex justify-between items-center text-[#FFFFFF] font-medium lg:text-sm md:text-xs">
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/home.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>TRANG CHỦ</p>
                         </a>
                     </li>
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/coin.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>CASINO</p>
                         </a>
                     </li>
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/ball.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>THỂ THAO</p>
                         </a>
                     </li>
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/card.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>GAME BÀI</p>
                         </a>
                     </li>
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/chicken.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>ĐÁ GÀ</p>
                         </a>
                     </li>
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/whell.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>XỔ SỐ</p>
                         </a>
                     </li>
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/queen.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>TIN TỨC</p>
                         </a>
                     </li>
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/gift.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>KHUYẾN MÃI</p>
                         </a>
                     </li>
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/hand.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>LIÊN HỆ</p>
                         </a>
                     </li>
                     <li class="hover:text-[#fead00]">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/icon/grid.png" alt="" class="lg:max-w-[30px] md:max-w-[20px] w-full m-auto">
                             <p>HƯỚNG DẪN</p>
                         </a>
@@ -452,7 +451,7 @@
                 <div class="swiper cubeSwiper mt-5">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                            <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                                 <div class="box w-full p-2 bg-gray-700 rounded-md">
                                     <div class="image overflow-hidden rounded-md w-full">
                                         <img src="./assets/img/slide/1.jpg" alt="" class="w-full">
@@ -463,7 +462,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                            <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                                 <div class="box w-full p-2 bg-gray-700 rounded-md">
                                     <div class="image overflow-hidden rounded-md w-full">
                                         <img src="./assets/img/slide/2.jpg" alt="" class="w-full">
@@ -474,7 +473,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                            <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                                 <div class="box w-full p-2 bg-gray-700 rounded-md">
                                     <div class="image overflow-hidden rounded-md w-full">
                                         <img src="./assets/img/slide/3.jpg" alt="" class="w-full">
@@ -485,7 +484,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                            <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                                 <div class="box w-full p-2 bg-gray-700 rounded-md">
                                     <div class="image overflow-hidden rounded-md w-full">
                                         <img src="./assets/img/slide/4.jpg" alt="" class="w-full">
@@ -496,7 +495,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                            <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                                 <div class="box w-full p-2 bg-gray-700 rounded-md">
                                     <div class="image overflow-hidden rounded-md w-full">
                                         <img src="./assets/img/slide/5.jpg" alt="" class="w-full">
@@ -507,7 +506,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                            <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                                 <div class="box w-full p-2 bg-gray-700 rounded-md">
                                     <div class="image overflow-hidden rounded-md w-full">
                                         <img src="./assets/img/slide/6.jpg" alt="" class="w-full">
@@ -518,7 +517,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                            <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                                 <div class="box w-full p-2 bg-gray-700 rounded-md">
                                     <div class="image overflow-hidden rounded-md w-full">
                                         <img src="./assets/img/slide/7.jpg" alt="" class="w-full">
@@ -529,7 +528,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                            <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                                 <div class="box w-full p-2 bg-gray-700 rounded-md">
                                     <div class="image overflow-hidden rounded-md w-full">
                                         <img src="./assets/img/slide/8.jpg" alt="" class="w-full">
@@ -553,10 +552,10 @@
                         </div>
                     </div>
                     <div class="link flex justify-between lg:justify-around items-center sm:w-[80%] sm:m-auto md:w-full md:m-0">
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/pic/google-play.png" alt="" class="w-[80%] m-auto lg:mx-0 mt-3">
                         </a>
-                        <a href="https://www.hay8811.com/?inviteCode=1766861" target="_blank">
+                        <a href="https://www.hay88.one/?inviteCode=9759282" target="_blank">
                             <img src="./assets/img/pic/app-store.png" alt="" class="w-[80%] m-auto lg:mx-0 mt-3">
                         </a>
                     </div>
